# notebooklm-py-mcp

./: .gitignore  README.md  evaluation.xml  pyproject.toml
src/notebooklm_mcp/: __init__.py  client.py  models.py  server.py
