[project]
name = "notebooklm-mcp"
version = "0.1.0"
description = "MCP server for Google NotebookLM — bridge between Claude Code and NotebookLM API"
requires-python = ">=3.11"
dependencies = [
    "notebooklm-py>=0.4.1",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
notebooklm-mcp = "notebooklm_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
